2005-10-13  Per Bothner  <per@bothner.com>

	* kawa/lang/Lambda.java (rewriteBody): If returnType specified, wrap
	body in coercion even if it is a BeginExp.
	However, don't do so it returnType is void_type.

2005-10-06  Per Bothner  <per@bothner.com>

	* Makefile.am (select-javaXX): Also search inherited $CLASSPATH -
	though last.

2005-10-05  Per Bothner  <per@bothner.com>

	* Makefile.am (select-javaXX): Add "." to CLASSPATH so we find the
	PreProcess class.

2005-10-05  Jim White  <jim@pagesmiths.com>

	* build.xml (lib-scm-4): Add parameters.scm.

2005-09-28  Per Bothner  <per@bothner.com>

	* kawa/repl.java (processArgs): Update copyright printed by --version.

	* Makefile.am: Fold +JAVA2 into JAVA4_FEATURES macro.

2005-09-27  Per Bothner  <per@bothner.com>

	* kawa/standard/location.java (rewrite): Do setCanRead and setCanWrite
	on variable captured by a location.
	Fixes Savannah bug #14640: internal compile error when using "location".

	* Makefile.am:  Define new PreProcess flag: use:java.net.URI.
	* build.xml: Likewise.

	* kawa/standard/load.java (apply): If relative, resolve against
	base uri here only, and not in loadSource.
	(loadSource): Make private.  Remove 'relative' parameter.
	Don't do any uri-resolving - assume caller has done that.
	If the result is still relative, assume it's a elative file name.
	Fixes Savannah bug #14397: load-relative doesn't work.

2005-09-26  Per Bothner  <per@bothner.com>

	* configure.in (AC_INIT): Set version to 1.8.
	* build.xml (version.release): Likewise.

2005-08-15  thomas kirk  <tk@research.att.com>

	* kawa/standard/Scheme.java (initScheme): define 'runnable'
	* kawa/GuiConsole.java (<init>): access Future environment with
	call to environment() rather than field access.

2005-08-17  Per Bothner  <per@bothner.com>

	* Makefile.am (JAR_DEPS_XML): Also depend on gnu/kawa/xml's stamp file.

2005-08-09  Per Bothner  <per@bothner.com>

	* kawa/lang/eval.Java (eval, evalBody): Update to use startFromContext,