@@ -1,3 +1,7 @@
+2005-10-13  Per Bothner  <per@bothner.com>
+
+	* lambda.java (rewriteBody): Update for changed Lambda.rewrite.
+
 2005-07-21  Per Bothner  <per@bothner.com>
 
 	* ELisp.java (environ): Since it is again possible to have multiple
